* allow different Miller indices for the various layers in a dynamic diffraction calculation

v1.7.7, 2024-04-19

* enable creation of Python 3.12 packages
* enable correct parsing of Sardana MCA data in spec files (by @dschick)
* fix for using lmfit-1.3.0

v1.7.6, 2023-11-16

* fix parsing error due to missing header entry in Rigaku ras file
* allow naming of simulation materials (Powder, Layer)
* example script for fitting diffraction data of an epitaxial multilayer (by @VeryBitter)
* update AlAs lattice parameters from APL 66, 682 (1995) (by @VeryBitter)
* enable building Python 3.11 wheels

v1.7.5, 2023-06-14

* Added AlSb to predefined_materials.py (#164) (by @andrews-tuwien)
* allow parsing of SPEC files/scans with missing data entry
* implement the calculation of the anisotropic Poission ratio of materials
  (#139). Related to that a method in the DarwinModel was renamed and declared
  internal.
* extend continuous integration tests by adding doctests
* directly depend on the lmfit package for implementation of our fitting
  models.
* more possibilities to specify filename lists in getras_scan, getSeifert_map,
  and getxrdml_scan
* allow bytes-stream instead of filename in XRDML
* enable setting free lattice parameters from the Crystal instance
* minor code improvements, forcing flake8 to pass upon merging a PR #149
* fix typo in Poisson ratio of GaInAs Darwin model (introduced in 1.7.4)
* make C-code respect the VERBOSITY. C-Code should now be silent with
  VERBOSITY<INFO_ALL. Otherwise lots of info is printed. #145
* remove set_bit/clear_bit functions in favor of using enum.IntFlag
* use plain pytest in the CI integration (no code change in the package)
* remove build_doc target for setup.py, use sphinx (see builddocs pipeline)

v1.7.4, 2022-10-31

* fix data type casting of cch1,2 in QConversion.init_area -> these can now be floating point values (#141 by @trdd)
* fix docstring for March-Dollase texture model in xu.simpack.Powder. The