@@ -7,7 +7,7 @@ trigger:
 pr: none
 
 variables:
-  python_version: 3.11
+  python_version: 3.12
 
 pool:
   vmImage: 'ubuntu-latest'
