@@ -15,12 +15,12 @@ trigger: none
 pr: none
 
 variables:
-  CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
+  CIBW_BUILD: cp39-* cp310-* cp311-* cp312-*
   CIBW_BEFORE_BUILD: pip install numpy scipy h5py
   CIBW_SKIP: "*-win32 *-manylinux_i686 *-musllinux_*"
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   DEVVERSION: post$(Build.BuildNumber)
-  python_version: 3.11
+  python_version: 3.12
 
 jobs:
 - job: linux
