@@ -20,12 +20,12 @@ jobs:
   steps:
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: '3.10'
+      versionSpec: '3.12'
   - script: pip install -r recommended_requirements.txt
     # needed to help pylint analyze our code
     displayName: "Install package requirements"
 
-  - script: pip install -e .
+  - script: pip install -v -e .
     # needed for the c-extension to exist in the source folder
     displayName: "Install xrayutilities"
 
