@@ -10,8 +10,6 @@ jobs:
     vmImage: ${{ parameters.vmImage }}
   strategy:
     matrix:
-      Python38:
-        python.version: '3.8'
       Python39:
         python.version: '3.9'
       Python310:
@@ -44,7 +42,7 @@ jobs:
       pip install coverage[toml] pytest pytest-cov pytest-azurepipelines pytest-subtests
     displayName: Install test requirements
   - script: |
-      pip install .[plot]
+      pip install -v .[plot]
     displayName: Install xrayutilities
   - script: |
       pytest --junitxml=junit/test-results.xml --cov --cov-config pyproject.toml --cov-report=xml --doctest-glob="*.rst"
