@@ -1,3 +1,4 @@
+* Numpy-2.0 support for wheels on PyPI
 * allow different Miller indices for the various layers in a dynamic diffraction calculation
 
 v1.7.7, 2024-04-19
